fixed socials alignment
socials icons were not being vertically aligned, so fixed that. also resized the project sections cards so that it looked better on smaller screens

--- a/src/template/style.css
+++ b/src/template/style.css
@@ -390,9 +390,8 @@ body {
 }
 
 @media (max-width: 400px) {
-    #main {
-        background-attachment: scroll;
-        height: -webkit-fill-available;
+    body {
+        height: 100%;
     }
 }
 
